@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - fix a bug in Log::Fmt where an event data value that was a reference
+          to a reference to an array was logged as its 0th element, not a
+          flogged array reference
 
 3.005     2023-06-08 20:41:02-04:00 America/New_York
         - add parse_event_string_as_hash, which loses duplicate k/v pairs
